--- a/index.html
+++ b/index.html
@@ -14,6 +14,19 @@
   <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
+  <div id="intro-modal">
+  <div id="intro-content">
+    <h1 id="intro-title">ReefShape Map Viewer</h1>
+    <p id="intro-description">
+      This website is a web-based viewer for georeferenced, underwater
+      photomosaics collected and processed using the ReefShape methodology.
+      Each dot on the map represents a plot - click on one to zoom in and 
+      display imagery for that plot. Use the dropdown to select the timepoint. 
+      Created by Will Greene at the Perry Institute for Marine Science
+    </p>
+    <button id="enter-button">Enter</button>
+  </div>
+</div>
   <div id="map"></div>
 
   <script src="js/map.js"></script>
