--- a/index.html
+++ b/index.html
@@ -30,5 +30,10 @@
   <div id="map"></div>
 
   <script src="js/map.js"></script>
+  <script>
+  document.getElementById("enter-button").addEventListener("click", () => {
+    document.getElementById("intro-modal").style.display = "none";
+  });
+</script>
 </body>
 </html>
