--- a/viewer.html
+++ b/viewer.html
@@ -4,7 +4,6 @@
   <meta charset="utf-8" />
   <title>Reef Viewer</title>
 
-  <!-- OpenLayers CSS -->
   <link
     rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/ol@latest/ol.css"
@@ -28,11 +27,8 @@
 
 <div id="map"></div>
 
-<!-- OpenLayers JS -->
-<script src="https://cdn.jsdelivr.net/npm/ol@latest/dist/ol.js"></script>
-
-<!-- Your viewer logic -->
-<script src="js/viewer-ol.js"></script>
+<!-- IMPORTANT: module script -->
+<script type="module" src="js/viewer-ol.js"></script>
 
 </body>
 </html>
