--- a/viewer.html
+++ b/viewer.html
@@ -21,13 +21,44 @@
       width: 100%;
       height: 100%;
     }
+
+    /* UI overlay */
+    .viewer-ui {
+      position: absolute;
+      top: 12px;
+      left: 12px;
+      z-index: 1000;
+      background: rgba(255, 255, 255, 0.9);
+      padding: 8px 10px;
+      border-radius: 6px;
+      font-family: sans-serif;
+      font-size: 14px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+    }
+
+    .viewer-ui select {
+      margin-left: 6px;
+    }
+
+    .back-link {
+      display: block;
+      margin-bottom: 6px;
+      text-decoration: none;
+      font-weight: bold;
+      color: #333;
+    }
   </style>
 </head>
 <body>
 
 <div id="map"></div>
 
-<!-- IMPORTANT: module script -->
+<div class="viewer-ui">
+  <a class="back-link" href="./index.html">← Back to map</a>
+  Timepoint:
+  <select id="timepointSelect"></select>
+</div>
+
 <script type="module" src="js/viewer-ol.js"></script>
 
 </body>
