--- a/viewer.html
+++ b/viewer.html
@@ -10,37 +10,50 @@
   />
 
   <style>
+    /* ---------- Global ---------- */
+
     html, body {
       margin: 0;
       padding: 0;
       height: 100%;
       overflow: hidden;
 
-      /* Global monospace look */
+      background: #000; /* Black background */
+      color: #fff;
+
       font-family: "Courier New", Courier, monospace;
     }
 
     #map {
       width: 100%;
       height: 100%;
+      background: #000; /* Ensures NoData blends seamlessly */
     }
 
-    /* UI overlay */
+    /* ---------- UI overlay ---------- */
+
     .viewer-ui {
       position: absolute;
       top: 12px;
       left: 12px;
       z-index: 1000;
-      background: rgba(255, 255, 255, 0.92);
+
+      background: rgba(0, 0, 0, 0.85);
+      color: #fff;
+
       padding: 10px 12px;
       border-radius: 6px;
+
       font-size: 14px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.25);
+      box-shadow: 0 2px 6px rgba(0,0,0,0.6);
     }
 
     .viewer-ui select {
       font-family: inherit;
       font-size: 14px;
+      background: #000;
+      color: #fff;
+      border: 1px solid #888;
       margin-left: 6px;
     }
 
@@ -49,30 +62,59 @@
       margin-bottom: 6px;
       text-decoration: none;
       font-weight: bold;
-      color: #000;
+      color: #fff;
     }
 
-    /* ---------- Scalebar styling ---------- */
+    .back-link:hover {
+      text-decoration: underline;
+    }
+
+    /* ---------- High-contrast scalebar ---------- */
 
     .ol-scale-bar,
     .ol-scale-line {
-      font-family: "Courier New", Courier, monospace;
+      background: none !important;
     }
 
     .ol-scale-bar-inner,
     .ol-scale-line-inner {
-      font-size: 14px;
-      line-height: 1.4;
+      background: #ffffff !important;
+      color: #000000 !important;
+
       border: 2px solid #000;
+      border-radius: 4px;
+
+      padding: 6px 8px;
+      font-weight: bold;
+
+      text-shadow:
+        -1px -1px 0 #fff,
+         1px -1px 0 #fff,
+        -1px  1px 0 #fff,
+         1px  1px 0 #fff;
     }
 
-    /* Mobile: make scalebar much larger */
+    .ol-scale-bar-inner > div,
+    .ol-scale-line-inner > div {
+      margin-top: 4px;
+    }
+
+    /* ---------- Mobile scaling ---------- */
+
     @media (max-width: 768px) {
       .ol-scale-bar-inner,
       .ol-scale-line-inner {
         font-size: 18px;
         border-width: 3px;
-        padding: 4px 6px;
+        padding: 8px 10px;
+      }
+
+      .viewer-ui {
+        font-size: 16px;
+      }
+
+      .viewer-ui select {
+        font-size: 16px;
       }
     }
   </style>
