--- a/splat.html
+++ b/splat.html
@@ -4,7 +4,6 @@
   <meta charset="utf-8" />
   <title>3D Gaussian Splat Viewer</title>
 
-  <!-- Required for mobile -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <style>
@@ -56,7 +55,8 @@
 
   <!-- SuperSplat Viewer -->
   <script type="module">
-    import { Viewer } from "https://cdn.jsdelivr.net/npm/supersplat-viewer@latest/dist/supersplat.js";
+    import { Viewer } from
+      "https://cdn.jsdelivr.net/gh/playcanvas/supersplat-viewer@main/dist/supersplat.js";
 
     const viewer = new Viewer({
       container: document.getElementById("viewer"),
@@ -64,7 +64,7 @@
       showStats: false
     });
 
-    // 🔴 REPLACE THIS with your actual SuperSpl.at file URL
+    // 🔴 Replace with your actual SuperSpl.at FILE URL
     viewer.load(
       "https://superspl.at/api/file/20e48446"
     );
