--- a/splat.html
+++ b/splat.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <title>3D Gaussian Splat Viewer</title>
+  <title>3D Reef Viewer</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -13,14 +13,8 @@
       width: 100%;
       height: 100%;
       background: black;
-      color: white;
-      font-family: "Courier New", Courier, monospace;
       overflow: hidden;
-    }
-
-    #viewer {
-      position: absolute;
-      inset: 0;
+      font-family: "Courier New", Courier, monospace;
     }
 
     #header {
@@ -31,16 +25,20 @@
       background: rgba(0,0,0,0.75);
       padding: 8px 12px;
       border-radius: 4px;
-      border: 1px solid rgba(255,255,255,0.25);
+      border: 1px solid rgba(255,255,255,0.3);
     }
 
-    a {
+    #header a {
       color: white;
       text-decoration: none;
     }
 
-    a:hover {
-      text-decoration: underline;
+    iframe {
+      position: absolute;
+      inset: 0;
+      width: 100%;
+      height: 100%;
+      border: none;
     }
   </style>
 </head>
@@ -51,23 +49,10 @@
     <a href="index.html">← Back to map</a>
   </div>
 
-  <div id="viewer"></div>
+  <!-- Replace MODEL_ID -->
+  <iframe allow="fullscreen; xr-spatial-tracking" src="https://superspl.at/s?id=20e48446">
+  </iframe>
 
-  <script type="module">
-    import { Viewer } from
-      "https://cdn.jsdelivr.net/gh/playcanvas/supersplat-viewer@0.7.0/dist/supersplat.js";
-
-    const viewer = new Viewer({
-      container: document.getElementById("viewer"),
-      backgroundColor: [0, 0, 0, 1],
-      showStats: false
-    });
-
-    // 🔴 MUST be the *file* URL, not the view URL
-    viewer.load(
-      "https://superspl.at/api/file/20e48446"
-    );
-  </script>
 
 </body>
 </html>
