--- a/index.html
+++ b/index.html
@@ -14,6 +14,18 @@
 
   <link rel="stylesheet" href="css/style.css" />
 </head>
+<div id="view-choice-modal" style="display:none;">
+  <div id="view-choice-content">
+    <h2 id="view-choice-title">Victory Reef</h2>
+
+    <div class="view-choice-buttons">
+      <button id="view-2d">View 2D Orthomosaic</button>
+      <button id="view-3d">View 3D Gaussian Splat</button>
+    </div>
+
+    <button id="view-cancel">Cancel</button>
+  </div>
+</div>
 <body>
   <div id="intro-modal">
   <div id="intro-content">
