--- a/index.html
+++ b/index.html
@@ -29,12 +29,13 @@
 <body>
   <div id="intro-modal">
   <div id="intro-content">
-    <h1 id="intro-title">ReefShape Map Viewer</h1>
+    <h1 id="intro-title">ReefShape Viewer</h1>
     <p id="intro-description">
-      This website is a web-based viewer for georeferenced, underwater
-      photomosaics collected and processed using the ReefShape methodology.
+      This is a web-based viewer for georeferenced, underwater
+      photomosaics collected and processed using the 
+      <a href="https://github.com/Perry-Institute/ReefShape/">ReefShape</a> methodology.
       Each dot on the map represents a plot - click on one to zoom in and 
-      display imagery for that plot. Use the dropdown to select the timepoint. 
+      display imagery in 2D, or, if available, 3D using gaussian splats. Use the dropdown to select the timepoint. 
       Created by Will Greene at the Perry Institute for Marine Science
     </p>
     <button id="enter-button">Enter</button>
