--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
       <a href="https://github.com/Perry-Institute/ReefShape/">ReefShape</a> methodology.
       Each dot on the map represents a plot - click on one to zoom in and 
       display imagery in 2D, or, if available, 3D using gaussian splats. Use the dropdown to select the timepoint. 
-      Created by Will Greene at the Perry Institute for Marine Science
+      Created by Will Greene at the Perry Institute for Marine Science / Arizona State University Center for 
+      Global Discovery and Conservation Science
     </p>
     <button id="enter-button">Enter</button>
   </div>
