--- a/viewer.html
+++ b/viewer.html
@@ -46,6 +46,9 @@
       border: 1px solid rgba(255,255,255,0.25);
 
       font-size: 14px;
+
+      /* ensures icon absolute positioning works */
+      position: relative;
     }
 
     .viewer-ui select,
@@ -59,13 +62,8 @@
       cursor: pointer;
     }
 
-    .viewer-ui button:hover {
-      background: #222;
-    }
-
-    .viewer-ui button:active {
-      background: #444;
-    }
+    .viewer-ui button:hover { background: #222; }
+    .viewer-ui button:active { background: #444; }
 
     .back-link {
       margin-right: 6px;
@@ -74,11 +72,65 @@
       color: #fff;
     }
 
-    .back-link:hover {
-      text-decoration: underline;
+    .back-link:hover { text-decoration: underline; }
+
+    /* ---------- Warning icon ---------- */
+
+    #macWarningIcon {
+      position: absolute;
+      right: -36px;
+      top: 0;
+
+      font-size: 26px;
+      cursor: pointer;
+      color: #ffcc00;
+      display: none; /* toggled by JS */
+      z-index: 5000;
+      line-height: 26px;
     }
 
-    /* ---------- OpenLayers scalebar (bigger halo) ---------- */
+    /* ---------- Modal ---------- */
+
+    #macWarningModal {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+
+      background: rgba(0,0,0,0.85);
+
+      color: #fff;
+      font-family: "Courier New", Courier, monospace;
+      z-index: 8000;
+
+      display: none;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+    }
+
+    #macWarningModal .warning-box {
+      max-width: 400px;
+      background: #000;
+      padding: 24px 30px;
+      border: 1px solid white;
+      border-radius: 6px;
+      font-size: 15px;
+      line-height: 1.5;
+    }
+
+    #macWarningModal button {
+      margin-top: 20px;
+      font-size: 16px;
+      padding: 6px 16px;
+      background: #ff6600;
+      border: none;
+      cursor: pointer;
+      color: white;
+    }
+
+    /* ---------- Scalebar ---------- */
 
     .ol-scale-line {
       bottom: 14px !important;
@@ -96,10 +148,6 @@
       font-family: "Courier New", Courier, monospace;
       font-size: 13px;
 
-      background: none !important;
-      border: none !important;
-
-      /* 🔑 THICKER, HIGH-CONTRAST HALO */
       text-shadow:
         -2px -2px 0 #000,
          0px -2px 0 #000,
@@ -121,23 +169,20 @@
       .viewer-ui {
         font-size: 16px;
       }
-
       .viewer-ui select,
-      .viewer-ui button {
-        font-size: 16px;
-      }
+      .viewer-ui button { font-size: 16px; }
 
       .ol-scale-line-inner {
         font-size: 16px;
       }
-
-      .ol-scale-line-inner > div {
-        height: 3px;
-      }
+      .ol-scale-line-inner > div { height: 3px; }
     }
+
   </style>
 </head>
+
 <body>
+
 <div id="map"></div>
 
 <div class="viewer-ui">
@@ -148,27 +193,27 @@
 
   Time:
   <select id="timepointSelect"></select>
+
+  <!-- mac warning icon -->
+  <div id="macWarningIcon">⚠️</div>
 </div>
 
-<script type="module" src="js/viewer-ol.js"></script>
-<!-- Mac / iOS warning icon -->
-<div id="macWarningIcon" class="warning-icon" style="display:none;">
-  ⚠️
-</div>
-
-<!-- warning popup modal -->
-<div id="macWarningModal" class="warning-modal" style="display:none;">
+<!-- modal outside UI -->
+<div id="macWarningModal">
   <div class="warning-box">
     <h2>Rendering Warning</h2>
     <p>
       This map has known rendering issues on
-      macOS &amp; iOS browsers due to WebGL limitations.<br><br>
-      If you see flickering triangles or incomplete tiles,
+      macOS & iOS browsers due to WebGL limitations.<br><br>
+      If you see flickering triangles or missing tiles,
       try panning/zooming to refresh the view.<br><br>
-      For best performance, visit this page from a PC or Android.
+      For best performance, use a PC or Android device.
     </p>
     <button id="macWarningClose">Close</button>
   </div>
 </div>
+
+<script type="module" src="js/viewer-ol.js"></script>
+
 </body>
 </html>
