--- a/viewer.html
+++ b/viewer.html
@@ -3,189 +3,41 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <title>Reef Viewer</title>
 
-  <link
-    rel="stylesheet"
-    href="https://cdn.jsdelivr.net/npm/ol@latest/ol.css"
-  />
+  <!-- OpenLayers CSS -->
+  <link rel="stylesheet"
+        href="https://cdn.jsdelivr.net/npm/ol@latest/ol.css"/>
+
+  <!-- Global site CSS -->
+  <link rel="stylesheet" href="style.css"/>
 
   <style>
+    /* viewer-page only */
     html, body {
-      margin: 0;
-      padding: 0;
-      height: 100%;
       overflow: hidden;
-
       background: #000;
-      color: #fff;
-      font-family: "Courier New", Courier, monospace;
     }
-
     #map {
       width: 100%;
       height: 100%;
       background: #000;
-    }
-
-    /* ---------- UI overlay ---------- */
-
-    .viewer-ui {
       position: absolute;
-      top: 12px;
-      left: 12px;
-      z-index: 2000;
-
-      display: flex;
-      align-items: center;
-      gap: 8px;
-
-      background: rgba(0, 0, 0, 0.9);
-      padding: 10px 12px;
-      border-radius: 6px;
-      border: 1px solid rgba(255,255,255,0.25);
-
-      font-size: 14px;
-
-      /* ensures icon absolute positioning works */
-      position: relative;
-    }
-
-    .viewer-ui select,
-    .viewer-ui button {
-      font-family: inherit;
-      font-size: inherit;
-      background: #000;
-      color: #fff;
-      border: 1px solid #888;
-      padding: 2px 8px;
-      cursor: pointer;
-    }
-
-    .viewer-ui button:hover { background: #222; }
-    .viewer-ui button:active { background: #444; }
-
-    .back-link {
-      margin-right: 6px;
-      text-decoration: none;
-      font-weight: bold;
-      color: #fff;
-    }
-
-    .back-link:hover { text-decoration: underline; }
-
-    /* ---------- Warning icon ---------- */
-
-    #macWarningIcon {
-      position: absolute;
-      right: -36px;
-      top: 0;
-
-      font-size: 26px;
-      cursor: pointer;
-      color: #ffcc00;
-      display: none; /* toggled by JS */
-      z-index: 5000;
-      line-height: 26px;
-    }
-
-    /* ---------- Modal ---------- */
-
-    #macWarningModal {
-      position: fixed;
       top: 0;
       left: 0;
-      width: 100%;
-      height: 100%;
-
-      background: rgba(0,0,0,0.85);
-
-      color: #fff;
-      font-family: "Courier New", Courier, monospace;
-      z-index: 8000;
-
-      display: none;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
     }
-
-    #macWarningModal .warning-box {
-      max-width: 400px;
-      background: #000;
-      padding: 24px 30px;
-      border: 1px solid white;
-      border-radius: 6px;
-      font-size: 15px;
-      line-height: 1.5;
-    }
-
-    #macWarningModal button {
-      margin-top: 20px;
-      font-size: 16px;
-      padding: 6px 16px;
-      background: #ff6600;
-      border: none;
-      cursor: pointer;
-      color: white;
-    }
-
-    /* ---------- Scalebar ---------- */
-
-    .ol-scale-line {
-      bottom: 14px !important;
-      left: 14px !important;
-
-      background: rgba(0, 0, 0, 0.9) !important;
-      border: 1px solid rgba(255,255,255,0.25);
-      border-radius: 6px;
-
-      padding: 8px 10px !important;
-    }
-
-    .ol-scale-line-inner {
-      color: #fff !important;
-      font-family: "Courier New", Courier, monospace;
-      font-size: 13px;
-
-      text-shadow:
-        -2px -2px 0 #000,
-         0px -2px 0 #000,
-         2px -2px 0 #000,
-        -2px  0px 0 #000,
-         2px  0px 0 #000,
-        -2px  2px 0 #000,
-         0px  2px 0 #000,
-         2px  2px 0 #000;
-    }
-
-    .ol-scale-line-inner > div {
-      background: #fff !important;
-      height: 2px;
-      margin-top: 6px;
-    }
-
-    @media (max-width: 768px) {
-      .viewer-ui {
-        font-size: 16px;
-      }
-      .viewer-ui select,
-      .viewer-ui button { font-size: 16px; }
-
-      .ol-scale-line-inner {
-        font-size: 16px;
-      }
-      .ol-scale-line-inner > div { height: 3px; }
-    }
-
   </style>
 </head>
 
 <body>
 
+<!-- ------------------ MAP CANVAS ------------------ -->
 <div id="map"></div>
 
+<!-- ------------------ TOP UI BAR ------------------ -->
 <div class="viewer-ui">
+
   <a class="back-link" href="./index.html">←</a>
 
   <button id="zoomOut">−</button>
@@ -194,26 +46,48 @@
   Time:
   <select id="timepointSelect"></select>
 
-  <!-- mac warning icon -->
-  <div id="macWarningIcon">⚠️</div>
 </div>
 
-<!-- modal outside UI -->
-<div id="macWarningModal">
+<!-- ------------------ WARNING ICON (mac only) ------------------ -->
+<div id="macWarningIcon" class="warning-icon" style="display:none;">
+  ⚠️
+</div>
+
+<!-- ------------------ WARNING MODAL ------------------ -->
+<div id="macWarningModal" class="warning-modal" style="display:none;">
   <div class="warning-box">
     <h2>Rendering Warning</h2>
     <p>
-      This map has known rendering issues on
-      macOS & iOS browsers due to WebGL limitations.<br><br>
-      If you see flickering triangles or missing tiles,
-      try panning/zooming to refresh the view.<br><br>
-      For best performance, use a PC or Android device.
+      This map may show flickering artifacts on macOS/iOS
+      due to browser WebGL limitations.<br><br>
+      Try panning/zooming to refresh tiles, or view from a PC/Android
+      for best performance.
     </p>
     <button id="macWarningClose">Close</button>
   </div>
 </div>
 
+<!-- ------------------ JAVASCRIPT ------------------ -->
 <script type="module" src="js/viewer-ol.js"></script>
+
+<script>
+/* Platform detect → show icon only on macOS/iOS */
+const isMac = /Macintosh|Mac OS X/i.test(navigator.userAgent);
+const isIOS = /iPad|iPhone|iPod/i.test(navigator.userAgent);
+
+if (isMac || isIOS) {
+  document.getElementById("macWarningIcon").style.display = "block";
+}
+
+/* Modal behavior */
+document.getElementById("macWarningIcon").onclick = () => {
+  document.getElementById("macWarningModal").style.display = "flex";
+};
+
+document.getElementById("macWarningClose").onclick = () => {
+  document.getElementById("macWarningModal").style.display = "none";
+};
+</script>
 
 </body>
 </html>
