--- a/viewer.html
+++ b/viewer.html
@@ -11,7 +11,7 @@
         href="https://cdn.jsdelivr.net/npm/ol@latest/ol.css"/>
 
   <!-- Global site CSS -->
-  <link rel="stylesheet" href="style.css"/>
+  <link rel="stylesheet" href="css/style.css"/>
 
   <style>
     /* viewer-page only */
