--- a/viewer.html
+++ b/viewer.html
@@ -3,91 +3,176 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
   <title>Reef Viewer</title>
 
   <!-- OpenLayers CSS -->
-  <link rel="stylesheet"
-        href="https://cdn.jsdelivr.net/npm/ol@latest/ol.css"/>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/ol@latest/ol.css"/>
 
-  <!-- Global site CSS -->
+  <!-- Viewer page CSS -->
   <link rel="stylesheet" href="css/style.css"/>
 
   <style>
-    /* viewer-page only */
-    html, body {
-      overflow: hidden;
-      background: #000;
-    }
+    /* MAP */
     #map {
       width: 100%;
       height: 100%;
-      background: #000;
       position: absolute;
       top: 0;
       left: 0;
+      background: black;
+    }
+
+    /* Viewer UI (overlay) */
+    .viewer-ui {
+      position: absolute;
+      top: 12px;
+      left: 12px;
+      z-index: 3000;
+      display: flex;
+      align-items: center;
+      gap: 8px;
+
+      background: rgba(0,0,0,0.85);
+      padding: 8px 12px;
+      border-radius: 6px;
+      border: 1px solid rgba(255,255,255,0.25);
+
+      font-size: 14px;
+      color: white;
+    }
+
+    .viewer-ui a.back-link {
+      text-decoration: none;
+      font-weight: bold;
+      color: white;
+      font-size: 18px;
+      margin-right: 8px;
+    }
+    .viewer-ui a.back-link:hover {
+      text-decoration: underline;
+    }
+
+    .viewer-ui button,
+    .viewer-ui select {
+      font-family: inherit;
+      font-size: inherit;
+      background: #000;
+      color: #fff;
+      border: 1px solid #888;
+      padding: 4px 8px;
+      cursor: pointer;
+    }
+    .viewer-ui button:hover { background: #222; }
+    .viewer-ui button:active { background: #444; }
+
+    /* Mac Warning Icon inside UI */
+    #macWarningIcon {
+      margin-left: 6px;
+      font-size: 22px;
+      cursor: pointer;
+      color: #ffcc00;
+      display: none; /* shown by JS */
+    }
+
+    /* Warning Modal */
+    #macWarningModal {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: rgba(0,0,0,0.7);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+      z-index: 5000;
+      display: none;
+    }
+    #macWarningModal .warning-box {
+      background: black;
+      border: 2px solid #ffcc00;
+      color: white;
+      padding: 20px 26px;
+      border-radius: 6px;
+      max-width: 420px;
+      font-family: "Courier New", Courier, monospace;
+    }
+    #macWarningModal .warning-box h2 {
+      color: #ffcc00;
+      margin-bottom: 12px;
+      font-size: 20px;
+    }
+    #macWarningModal button {
+      margin-top: 16px;
+      padding: 8px 18px;
+      border: 1px solid #ffcc00;
+      background: black;
+      color: white;
+      cursor: pointer;
+    }
+    #macWarningModal button:hover {
+      background: #ffcc00;
+      color: black;
     }
   </style>
 </head>
 
 <body>
 
-<!-- ------------------ MAP CANVAS ------------------ -->
-<div id="map"></div>
+  <!-- Map Container -->
+  <div id="map"></div>
 
-<!-- ------------------ TOP UI BAR ------------------ -->
-<div class="viewer-ui">
+  <!-- UI Overlay -->
+  <div class="viewer-ui">
+    <a class="back-link" href="./index.html">← Back</a>
 
-  <a class="back-link" href="./index.html">←</a>
+    <button id="zoomOut">−</button>
+    <button id="zoomIn">+</button>
 
-  <button id="zoomOut">−</button>
-  <button id="zoomIn">+</button>
+    <label for="timepointSelect">Time:</label>
+    <select id="timepointSelect"></select>
 
-  Time:
-  <select id="timepointSelect"></select>
-
-</div>
-
-<!-- ------------------ WARNING ICON (mac only) ------------------ -->
-<div id="macWarningIcon" class="warning-icon" style="display:none;">
-  ⚠️
-</div>
-
-<!-- ------------------ WARNING MODAL ------------------ -->
-<div id="macWarningModal" class="warning-modal" style="display:none;">
-  <div class="warning-box">
-    <h2>Rendering Warning</h2>
-    <p>
-      This map may show flickering artifacts on macOS/iOS
-      due to browser WebGL limitations.<br><br>
-      Try panning/zooming to refresh tiles, or view from a PC/Android
-      for best performance.
-    </p>
-    <button id="macWarningClose">Close</button>
+    <!-- mac warning icon -->
+    <span id="macWarningIcon">⚠️</span>
   </div>
-</div>
 
-<!-- ------------------ JAVASCRIPT ------------------ -->
-<script type="module" src="js/viewer-ol.js"></script>
+  <!-- Warning Modal -->
+  <div id="macWarningModal">
+    <div class="warning-box">
+      <h2>Rendering Warning</h2>
+      <p>
+        This map has known rendering artifacts on macOS and iOS due to WebGL
+        limitations.<br><br>
+        Try panning or zooming to refresh tiles, or for better performance,
+        view this page on a PC or Android device.
+      </p>
+      <button id="macWarningClose">Close</button>
+    </div>
+  </div>
 
-<script>
-/* Platform detect → show icon only on macOS/iOS */
-const isMac = /Macintosh|Mac OS X/i.test(navigator.userAgent);
-const isIOS = /iPad|iPhone|iPod/i.test(navigator.userAgent);
+  <!-- Scripts -->
+  <script type="module" src="js/viewer-ol.js"></script>
 
-if (isMac || isIOS) {
-  document.getElementById("macWarningIcon").style.display = "block";
-}
+  <script>
+    // Only show icon if on Mac / iOS
+    const ua = navigator.userAgent || "";
+    const isMac = /Macintosh|Mac OS X/i.test(ua);
+    const isIOS = /iPad|iPhone|iPod/i.test(ua);
 
-/* Modal behavior */
-document.getElementById("macWarningIcon").onclick = () => {
-  document.getElementById("macWarningModal").style.display = "flex";
-};
+    const macIcon = document.getElementById("macWarningIcon");
+    const macModal = document.getElementById("macWarningModal");
 
-document.getElementById("macWarningClose").onclick = () => {
-  document.getElementById("macWarningModal").style.display = "none";
-};
-</script>
+    if (isMac || isIOS) {
+      macIcon.style.display = "inline";
+    }
+
+    macIcon.onclick = () => {
+      macModal.style.display = "flex";
+    };
+
+    document.getElementById("macWarningClose").onclick = () => {
+      macModal.style.display = "none";
+    };
+  </script>
 
 </body>
 </html>
